--- a/d02/d02 Homework/My first website.html
+++ b/d02/d02 Homework/My first website.html
@@ -1,9 +1,10 @@
 <style>
   #SarveshCropped {
-    height: 350px;
-    width: 300px;
+    height: 250px;
+    width: 225px;
     padding: 5px;
     border:5px solid white;
+    padding: 5px white;
   }
   .image1 {
     height: 400px;
@@ -40,7 +41,7 @@
   }
 </style>
 
-<img src="./SarveshCropped.jpg" id="" ="SarveshCropped">
+<img src="./SarveshCropped.jpg" id="SarveshCropped">
 
 <h1>A Few of My Favorite Things...</h1>
 
